// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign getSigningBytes should return transaction bytes for given params 1`] = `
Object {
  "data": Array [
    10,
    5,
    116,
    111,
    107,
    101,
    110,
    18,
    8,
    116,
    114,
    97,
    110,
    115,
    102,
    101,
    114,
    24,
    1,
    32,
    128,
    173,
    226,
    4,
    42,
    32,
    241,
    185,
    244,
    238,
    113,
    181,
    213,
    133,
    125,
    59,
    52,
    109,
    68,
    28,
    169,
    103,
    242,
    120,
    112,
    235,
    238,
    136,
    86,
    157,
    179,
    100,
    253,
    19,
    226,
    138,
    219,
    163,
    50,
    33,
    8,
    128,
    250,
    191,
    166,
    178,
    182,
    143,
    7,
    18,
    20,
    58,
    151,
    31,
    208,
    43,
    74,
    7,
    252,
    32,
    170,
    209,
    147,
    109,
    60,
    177,
    210,
    99,
    185,
    110,
    15,
    26,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`sign signTransactionWithPrivateKey should return signed transaction for given params schema 1`] = `
Object {
  "command": "transfer",
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      38,
      143,
      225,
      49,
      192,
      231,
      21,
      35,
      236,
      239,
      210,
      253,
      212,
      23,
      251,
      4,
      67,
      101,
      118,
      250,
      195,
      8,
      174,
      90,
      96,
      99,
      132,
      155,
      247,
      194,
      179,
      14,
    ],
    "type": "Buffer",
  },
  "module": "token",
  "nonce": 1n,
  "params": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        147,
        223,
        226,
        116,
        135,
        86,
        68,
        155,
        192,
        67,
        227,
        167,
        189,
        15,
        188,
        6,
        229,
        131,
        102,
        61,
        17,
        45,
        151,
        238,
        36,
        225,
        228,
        242,
        34,
        222,
        86,
        153,
        57,
        112,
        54,
        70,
        147,
        133,
        161,
        37,
        252,
        77,
        153,
        81,
        69,
        148,
        99,
        112,
        132,
        121,
        119,
        202,
        22,
        133,
        91,
        254,
        224,
        253,
        115,
        203,
        189,
        128,
        115,
        14,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Both mandatory and optional member group should have correct signatures 1`] = `
Object {
  "command": "registerMultisignature",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 4,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
    "signatures": Array [
      Object {
        "data": Array [
          57,
          59,
          45,
          222,
          105,
          222,
          184,
          148,
          4,
          142,
          130,
          116,
          88,
          206,
          27,
          71,
          4,
          152,
          35,
          182,
          129,
          153,
          241,
          90,
          129,
          107,
          208,
          70,
          185,
          27,
          86,
          211,
          175,
          33,
          15,
          142,
          126,
          35,
          17,
          217,
          252,
          138,
          79,
          161,
          173,
          177,
          117,
          205,
          47,
          201,
          8,
          43,
          54,
          239,
          103,
          7,
          4,
          254,
          62,
          124,
          195,
          139,
          28,
          10,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          125,
          14,
          6,
          250,
          189,
          240,
          132,
          180,
          25,
          146,
          53,
          242,
          141,
          234,
          1,
          66,
          82,
          147,
          171,
          119,
          134,
          185,
          229,
          219,
          228,
          22,
          247,
          197,
          161,
          209,
          243,
          55,
          253,
          195,
          96,
          137,
          23,
          94,
          110,
          164,
          106,
          138,
          100,
          146,
          0,
          199,
          117,
          180,
          20,
          163,
          39,
          64,
          165,
          156,
          175,
          188,
          108,
          108,
          175,
          175,
          44,
          93,
          246,
          9,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          246,
          40,
          147,
          69,
          121,
          168,
          224,
          191,
          181,
          254,
          35,
          27,
          95,
          142,
          70,
          27,
          167,
          14,
          78,
          87,
          246,
          40,
          101,
          200,
          92,
          77,
          64,
          84,
          39,
          218,
          23,
          216,
          177,
          205,
          92,
          253,
          115,
          104,
          56,
          249,
          62,
          230,
          130,
          187,
          100,
          18,
          87,
          230,
          53,
          180,
          68,
          205,
          173,
          16,
          36,
          124,
          83,
          72,
          132,
          237,
          216,
          216,
          177,
          3,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          195,
          218,
          19,
          119,
          142,
          220,
          232,
          231,
          143,
          150,
          130,
          228,
          241,
          177,
          188,
          24,
          110,
          238,
          93,
          238,
          140,
          232,
          110,
          96,
          141,
          8,
          211,
          196,
          221,
          100,
          63,
          112,
          57,
          202,
          3,
          218,
          131,
          57,
          145,
          94,
          126,
          79,
          244,
          244,
          113,
          86,
          2,
          107,
          243,
          82,
          182,
          233,
          166,
          110,
          219,
          4,
          83,
          81,
          33,
          9,
          10,
          102,
          16,
          15,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        129,
        255,
        82,
        51,
        159,
        159,
        7,
        204,
        68,
        49,
        2,
        171,
        126,
        215,
        154,
        225,
        41,
        244,
        76,
        145,
        123,
        116,
        202,
        176,
        179,
        137,
        201,
        168,
        130,
        10,
        61,
        216,
        57,
        114,
        166,
        203,
        67,
        205,
        28,
        219,
        3,
        132,
        38,
        71,
        138,
        198,
        237,
        25,
        68,
        155,
        187,
        253,
        236,
        194,
        143,
        254,
        41,
        220,
        209,
        36,
        161,
        138,
        216,
        10,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Only mandatory members should have correct signatures 1`] = `
Object {
  "command": "registerMultisignature",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 2,
    "optionalKeys": Array [],
    "signatures": Array [
      Object {
        "data": Array [
          161,
          190,
          238,
          34,
          211,
          199,
          7,
          213,
          108,
          244,
          21,
          16,
          18,
          74,
          113,
          232,
          105,
          205,
          226,
          187,
          99,
          240,
          252,
          101,
          45,
          60,
          10,
          251,
          246,
          214,
          46,
          105,
          225,
          243,
          90,
          134,
          38,
          153,
          20,
          129,
          203,
          85,
          43,
          159,
          122,
          139,
          1,
          172,
          174,
          185,
          30,
          12,
          238,
          71,
          174,
          69,
          111,
          115,
          58,
          120,
          19,
          198,
          50,
          11,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          147,
          106,
          112,
          241,
          36,
          51,
          208,
          227,
          94,
          215,
          51,
          178,
          132,
          45,
          214,
          217,
          221,
          79,
          251,
          176,
          47,
          100,
          67,
          137,
          55,
          72,
          152,
          187,
          94,
          142,
          221,
          104,
          218,
          108,
          250,
          239,
          137,
          17,
          118,
          113,
          186,
          167,
          190,
          163,
          135,
          32,
          133,
          94,
          200,
          20,
          110,
          189,
          7,
          124,
          255,
          92,
          210,
          183,
          159,
          199,
          39,
          235,
          42,
          5,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        190,
        123,
        181,
        141,
        207,
        182,
        18,
        146,
        78,
        201,
        245,
        92,
        176,
        7,
        92,
        179,
        107,
        3,
        177,
        201,
        51,
        120,
        247,
        123,
        249,
        121,
        120,
        166,
        82,
        92,
        82,
        245,
        107,
        62,
        122,
        85,
        156,
        12,
        229,
        214,
        184,
        117,
        174,
        161,
        203,
        119,
        24,
        24,
        67,
        65,
        63,
        103,
        62,
        120,
        189,
        214,
        124,
        164,
        112,
        45,
        32,
        215,
        48,
        15,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Only optional members should have correct signatures 1`] = `
Object {
  "command": "registerMultisignature",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [],
    "numberOfSignatures": 1,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
    "signatures": Array [
      Object {
        "data": Array [
          115,
          96,
          236,
          100,
          178,
          84,
          240,
          232,
          134,
          30,
          250,
          205,
          1,
          237,
          3,
          100,
          33,
          71,
          172,
          209,
          238,
          253,
          189,
          254,
          174,
          243,
          14,
          90,
          214,
          153,
          207,
          116,
          12,
          52,
          1,
          146,
          49,
          165,
          29,
          10,
          22,
          157,
          50,
          143,
          232,
          164,
          19,
          162,
          52,
          5,
          71,
          255,
          70,
          110,
          24,
          209,
          33,
          175,
          186,
          113,
          20,
          5,
          47,
          1,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          55,
          80,
          44,
          15,
          106,
          20,
          160,
          157,
          116,
          134,
          81,
          6,
          214,
          215,
          231,
          21,
          61,
          204,
          142,
          151,
          232,
          189,
          43,
          38,
          61,
          132,
          245,
          153,
          62,
          7,
          199,
          112,
          119,
          42,
          114,
          227,
          30,
          60,
          189,
          154,
          81,
          249,
          135,
          91,
          190,
          224,
          2,
          236,
          59,
          222,
          198,
          46,
          53,
          222,
          16,
          54,
          98,
          139,
          117,
          13,
          161,
          121,
          165,
          2,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        122,
        195,
        8,
        204,
        161,
        59,
        175,
        202,
        146,
        133,
        233,
        75,
        100,
        25,
        188,
        88,
        37,
        96,
        186,
        177,
        163,
        16,
        166,
        66,
        234,
        137,
        206,
        62,
        72,
        147,
        126,
        135,
        97,
        35,
        48,
        105,
        45,
        154,
        62,
        77,
        239,
        204,
        7,
        55,
        110,
        68,
        183,
        155,
        182,
        99,
        62,
        121,
        20,
        74,
        245,
        50,
        137,
        215,
        231,
        92,
        50,
        190,
        79,
        0,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Second signature case should have correct signatures 1`] = `
Object {
  "command": "registerMultisignature",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          11,
          33,
          31,
          206,
          75,
          97,
          80,
          131,
          112,
          28,
          184,
          168,
          201,
          148,
          7,
          228,
          100,
          178,
          249,
          170,
          79,
          54,
          112,
          149,
          50,
          45,
          225,
          183,
          126,
          95,
          207,
          190,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          255,
          48,
          239,
          64,
          183,
          222,
          66,
          17,
          65,
          55,
          190,
          70,
          241,
          0,
          157,
          48,
          229,
          193,
          152,
          9,
          167,
          61,
          90,
          22,
          43,
          201,
          159,
          126,
          118,
          129,
          214,
          61,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 2,
    "optionalKeys": Array [],
    "signatures": Array [
      Object {
        "data": Array [
          235,
          57,
          123,
          241,
          29,
          31,
          89,
          230,
          113,
          161,
          211,
          231,
          212,
          5,
          200,
          88,
          135,
          31,
          159,
          205,
          22,
          157,
          17,
          54,
          93,
          104,
          27,
          219,
          79,
          77,
          182,
          18,
          197,
          229,
          150,
          143,
          226,
          163,
          89,
          132,
          191,
          133,
          92,
          191,
          140,
          235,
          121,
          31,
          61,
          180,
          69,
          132,
          131,
          118,
          68,
          251,
          228,
          7,
          138,
          36,
          14,
          158,
          163,
          3,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          232,
          203,
          255,
          16,
          7,
          18,
          60,
          136,
          144,
          84,
          212,
          224,
          73,
          194,
          79,
          51,
          222,
          251,
          224,
          102,
          151,
          39,
          89,
          168,
          166,
          133,
          168,
          128,
          93,
          248,
          179,
          186,
          239,
          18,
          97,
          244,
          43,
          36,
          198,
          143,
          110,
          208,
          91,
          64,
          245,
          191,
          196,
          191,
          221,
          40,
          155,
          115,
          207,
          237,
          70,
          61,
          164,
          234,
          23,
          168,
          166,
          100,
          43,
          15,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        55,
        57,
        240,
        169,
        248,
        107,
        250,
        71,
        25,
        126,
        225,
        166,
        120,
        248,
        30,
        9,
        11,
        201,
        60,
        90,
        35,
        243,
        195,
        118,
        140,
        244,
        54,
        234,
        73,
        214,
        48,
        189,
        93,
        224,
        135,
        120,
        84,
        34,
        54,
        212,
        131,
        187,
        39,
        16,
        238,
        106,
        219,
        136,
        218,
        227,
        106,
        140,
        75,
        77,
        124,
        94,
        156,
        139,
        167,
        125,
        223,
        23,
        7,
        11,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Sender is a member of the group should have correct signatures 1`] = `
Object {
  "command": "registerMultisignature",
  "fee": 1500000000n,
  "module": "auth",
  "nonce": 1n,
  "params": Object {
    "mandatoryKeys": Array [
      Object {
        "data": Array [
          11,
          33,
          31,
          206,
          75,
          97,
          80,
          131,
          112,
          28,
          184,
          168,
          201,
          148,
          7,
          228,
          100,
          178,
          249,
          170,
          79,
          54,
          112,
          149,
          50,
          45,
          225,
          183,
          126,
          95,
          207,
          190,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          74,
          103,
          100,
          106,
          68,
          99,
          19,
          219,
          150,
          76,
          57,
          55,
          3,
          89,
          132,
          92,
          82,
          252,
          233,
          34,
          90,
          57,
          41,
          119,
          14,
          244,
          20,
          72,
          194,
          88,
          253,
          57,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          241,
          185,
          244,
          238,
          113,
          181,
          213,
          133,
          125,
          59,
          52,
          109,
          68,
          28,
          169,
          103,
          242,
          120,
          112,
          235,
          238,
          136,
          86,
          157,
          179,
          100,
          253,
          19,
          226,
          138,
          219,
          163,
        ],
        "type": "Buffer",
      },
    ],
    "numberOfSignatures": 4,
    "optionalKeys": Array [
      Object {
        "data": Array [
          87,
          223,
          92,
          56,
          17,
          150,
          25,
          57,
          248,
          220,
          250,
          133,
          140,
          110,
          174,
          254,
          191,
          170,
          77,
          233,
          66,
          247,
          231,
          3,
          191,
          136,
          18,
          126,
          14,
          233,
          204,
          164,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          250,
          64,
          107,
          105,
          82,
          211,
          119,
          240,
          39,
          137,
          32,
          227,
          235,
          141,
          169,
          25,
          228,
          207,
          92,
          104,
          176,
          46,
          235,
          165,
          216,
          179,
          51,
          79,
          220,
          3,
          105,
          182,
        ],
        "type": "Buffer",
      },
    ],
    "signatures": Array [
      Object {
        "data": Array [
          124,
          54,
          4,
          136,
          33,
          180,
          245,
          3,
          159,
          136,
          137,
          221,
          180,
          196,
          80,
          69,
          179,
          116,
          148,
          51,
          81,
          30,
          82,
          164,
          242,
          170,
          135,
          253,
          108,
          146,
          197,
          5,
          86,
          207,
          92,
          158,
          144,
          60,
          161,
          58,
          18,
          33,
          64,
          66,
          130,
          20,
          228,
          128,
          247,
          92,
          69,
          104,
          107,
          51,
          52,
          133,
          83,
          135,
          167,
          145,
          114,
          144,
          158,
          8,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          131,
          55,
          96,
          214,
          81,
          172,
          140,
          244,
          163,
          190,
          44,
          140,
          110,
          42,
          43,
          146,
          29,
          8,
          139,
          38,
          10,
          22,
          41,
          158,
          115,
          58,
          22,
          109,
          189,
          2,
          83,
          118,
          26,
          127,
          217,
          170,
          173,
          154,
          38,
          115,
          128,
          106,
          213,
          168,
          23,
          180,
          241,
          231,
          239,
          233,
          87,
          130,
          243,
          120,
          99,
          27,
          18,
          12,
          51,
          170,
          39,
          70,
          17,
          6,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          82,
          110,
          111,
          217,
          206,
          178,
          192,
          7,
          170,
          174,
          237,
          140,
          85,
          179,
          122,
          12,
          212,
          137,
          35,
          6,
          249,
          89,
          147,
          167,
          192,
          4,
          80,
          212,
          171,
          197,
          132,
          98,
          191,
          158,
          120,
          36,
          95,
          114,
          86,
          120,
          251,
          31,
          168,
          136,
          237,
          116,
          49,
          10,
          141,
          122,
          183,
          126,
          201,
          223,
          197,
          239,
          214,
          240,
          239,
          96,
          163,
          131,
          37,
          8,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          137,
          210,
          21,
          98,
          1,
          54,
          18,
          43,
          171,
          81,
          20,
          9,
          190,
          62,
          113,
          10,
          100,
          198,
          41,
          133,
          214,
          170,
          0,
          67,
          170,
          122,
          240,
          80,
          255,
          115,
          173,
          101,
          17,
          171,
          36,
          136,
          8,
          7,
          104,
          40,
          99,
          115,
          88,
          6,
          122,
          36,
          212,
          187,
          49,
          249,
          95,
          82,
          212,
          16,
          227,
          224,
          46,
          190,
          67,
          106,
          175,
          12,
          77,
          13,
        ],
        "type": "Buffer",
      },
      Object {
        "data": Array [
          249,
          183,
          100,
          22,
          84,
          174,
          49,
          191,
          61,
          30,
          12,
          25,
          208,
          233,
          83,
          37,
          98,
          216,
          133,
          26,
          79,
          111,
          137,
          1,
          171,
          178,
          76,
          89,
          239,
          66,
          182,
          188,
          147,
          15,
          175,
          169,
          133,
          25,
          33,
          241,
          106,
          62,
          176,
          191,
          199,
          214,
          38,
          75,
          99,
          103,
          142,
          189,
          8,
          101,
          19,
          221,
          63,
          140,
          82,
          53,
          189,
          186,
          177,
          9,
        ],
        "type": "Buffer",
      },
    ],
  },
  "senderPublicKey": Object {
    "data": Array [
      11,
      33,
      31,
      206,
      75,
      97,
      80,
      131,
      112,
      28,
      184,
      168,
      201,
      148,
      7,
      228,
      100,
      178,
      249,
      170,
      79,
      54,
      112,
      149,
      50,
      45,
      225,
      183,
      126,
      95,
      207,
      190,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        113,
        108,
        178,
        159,
        97,
        193,
        83,
        236,
        203,
        135,
        27,
        153,
        51,
        136,
        24,
        237,
        122,
        46,
        49,
        234,
        166,
        89,
        78,
        170,
        199,
        105,
        98,
        209,
        60,
        188,
        234,
        183,
        140,
        88,
        253,
        67,
        116,
        204,
        169,
        80,
        171,
        99,
        1,
        245,
        147,
        232,
        54,
        99,
        46,
        255,
        97,
        67,
        124,
        46,
        30,
        72,
        4,
        244,
        125,
        40,
        242,
        234,
        108,
        12,
      ],
      "type": "Buffer",
    },
  ],
}
`;
